--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -217,12 +217,23 @@
   "add": "Добавить",
   "image": "Фотография",
   "footer": {
-    "companyName": "SolaChat",
-    "companySlogan": "Цифровая валюта будущего",
     "about": "О нас",
-    "terms": "Условия использования",
     "privacy": "Политика конфиденциальности",
-    "support": "Поддержка",
+    "terms": "Условия использования",
+    "slogan": "Безопасные крипто-сообщения. Сквозное шифрование. Основано на блокчейне.",
+    "product": "Продукт",
+    "company": "Компания",
+    "legal": "Правовая информация",
+    "community": "Присоединяйтесь к сообществу",
+    "features": "Функции",
+    "security": "Аудит безопасности",
+    "download": "Скачать приложения",
+    "blog": "Блог",
+    "careers": "Карьера",
+    "compliance": "Соответствие",
+    "learnMore": "Узнать больше",
+    "madeWith": "Сделано с",
+    "team": "командой DarkChat",
     "rightsReserved": "Все права защищены"
   },
   "aboutSolacoinTitle": "О SolaChat",
@@ -332,5 +343,61 @@
     "12": "декабря"
   },
   "date_format": "{{day}} {{month}}",
-  "date_format_with_year": "{{day}} {{month}} {{year}}"
+  "date_format_with_year": "{{day}} {{month}} {{year}}",
+  "feedback": "Обратная связь",
+  "vacancies": "Вакансии",
+  "documents": "Документы",
+  "cta": {
+    "title": "Добро пожаловать в SolanaChat",
+    "description": "Более 100 000 пользователей уже наслаждаются безопасной и анонимной связью",
+    "download": "Скачать сейчас"
+  },
+  "reasons": {
+    "title": "7 причин выбрать SolanaChat",
+    "security": {
+      "title": "Абсолютная безопасность",
+      "description": "Мгновенное шифрование сообщений и данных, защищенных по военным стандартам."
+    },
+    "anonymity": {
+      "title": "Анонимность в сети",
+      "description": "Общайся без привязки к номеру телефона или email. Полная приватность."
+    },
+    "transactions": {
+      "title": "Молниеносные транзакции",
+      "description": "Solana позволяет мгновенно переводить средства и совершать микроплатежи."
+    },
+    "decentralization": {
+      "title": "Глобальная децентрализация",
+      "description": "Без централизованных серверов. Никто не сможет заблокировать доступ."
+    },
+    "web3": {
+      "title": "Web3 интеграция",
+      "description": "Подключай криптокошельки, управляй NFT и токенами прямо в чате."
+    },
+    "wallets": {
+      "title": "Безопасные кошельки",
+      "description": "Встроенный крипто-кошелек для удобного хранения активов."
+    },
+    "transparency": {
+      "title": "Прозрачная экосистема",
+      "description": "Открытый код, отсутствие скрытых платежей и максимальная честность."
+    }
+  },
+  "hero": {
+    "title": "SolaChat",
+    "subtitle": "Мессенджер нового поколения для Web3 эры",
+    "features": {
+      "encryption": "End-to-end шифрование",
+      "decentralization": "Децентрализованная архитектура",
+      "walletSupport": "Поддержка криптовалютных кошельков"
+    },
+    "button": "Начать бесплатно"
+  },
+  "navbar": {
+    "feedback": "Обратная связь",
+    "vacancies": "Вакансии",
+    "documents": "Документы",
+    "signIn": "Войти",
+    "signUp": "Регистрация"
+  }
 }
