Доработка домашней страницы и локализации

--- a/public/locales/ch.json
+++ b/public/locales/ch.json
@@ -54,7 +54,7 @@
     "compliance": "合规性",
     "learnMore": "了解更多",
     "madeWith": "制作于",
-    "team": "DarkChat 团队",
+    "team": "SolaChat 团队",
     "rightsReserved": "版权所有"
   },
   "report": "报告",
