Доработка вакансий (запрос в бд), доработка создание чата через отправку сообщений. Редизайн страниц регистрация и логин

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -383,5 +383,9 @@
     "windowsDesc": "Native Windows client...",
     "macosDesc": "macOS optimized version...",
     "webDesc": "Browser-based solution..."
-  }
+  },
+  "enterTOTPCode": "Enter TOTP code",
+  "public_key": "Public Key",
+  "general_settings": "General Settings",
+  "data_storage": "Data Storage"
 }
