--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -391,5 +391,29 @@
   "data_storage": "Data Storage",
   "ask_question": "Ask a question",
   "solchat_faq": "SolaChat FAQ",
-  "privacy_policy": "Privacy Policy"
+  "privacy_policy": "Privacy Policy",
+  "connectWalletConnect": "Connect Wallet Connect",
+  "settings": "Settings",
+  "textSize": "Text Size",
+  "keyboardSettings": "Keyboard",
+  "sendOnEnter": "Send on Enter",
+  "sendOnCtrlEnter": "Send on Ctrl + Enter",
+  "newLineShiftEnter": "New line: Shift + Enter",
+  "newLineEnter": "New line: Enter",
+  "edit_profile": "Edit Profile",
+  "about_me": "About Me",
+  "about_me_placeholder": "Tell about yourself in Web3 context. Example: Solidity dev, DeFi enthusiast, NFT artist",
+  "username_description_part1": "You can choose a public username in",
+  "username_description_part2": ". Others can find you by this name without knowing your public key.",
+  "username_rules": "Allowed characters:",
+  "and_underscores": "and underscores",
+  "min_length_5": "Minimum length - 5 characters",
+  "about_me_description": "Any details, such as age, occupation or city.",
+  "example_about_me": "Example: Solidity dev, DeFi enthusiast, NFT artist",
+  "username_min_length": "Username must be at least 5 characters long",
+    "username_max_length": "Username must be no more than 30 characters long",
+    "username_invalid_format": "Invalid username format",
+  "invalid_username": "Invalid username",
+  "username_taken": "Username is already taken",
+  "username_available": "Username is available"
 }
